# tg_group_backuper_bot

./: .dockerignore  .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py  utils.py
