[project]
name = "tg-group-backuper-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 88  # Максимальная длина строки
target-version = "py313"  # Твой Python
fix = true  # Автоисправления

[tool.ruff.lint]
select = [
    "E", # Ошибки PEP8
    "W", # Предупреждения PEP8
    "F", # Ошибки Pyflakes (неиспользуемые импорты, переменные)
    "I", # Сортировка импортов (isort)
    "N", # Стиль именования (PEP8)
    "UP", # Обновление до нового синтаксиса Python
    "B", # flake8-bugbear (ловит потенциальные баги)
    "A", # flake8-builtins (избегаем теневых имен)
    "C4", # flake8-comprehensions (оптимизация list/set comprehensions)
    "S", # flake8-bandit (проверка безопасности кода)
    "PERF", # flake8-perf (проверка на медленные конструкции)
    "PL", # pylint (дополнительные проверки)
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"  # Двойные кавычки
indent-style = "space"  # Пробелы вместо табов
